<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_novo_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    android:background="@android:color/holo_blue_light"
    tools:context="giovannigardusi.listadecompras.Activities.ActivityNovoItem">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="@dimen/_18sdp"
                    android:text="@string/activity_novo_item_titulo"
                    android:fontFamily="sans-serif-light" />

                <EditText
                    android:id="@+id/activity_novo_item_item"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:hint="@string/activity_novo_item_dica"
                    android:fontFamily="sans-serif-light" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <Spinner
                        android:id="@+id/activity_novo_item_quantidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:dropDownWidth="@dimen/_80sdp" />

                    <android.support.v4.widget.Space
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="match_parent" />

                    <Spinner
                        android:id="@+id/activity_novo_item_unidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/toolbar_shadow"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/shadow_down" />

            <TextView
                android:id="@+id/activity_novo_item_adicionar"
                android:layout_width="match_parent"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:background="@android:color/holo_blue_bright"
                android:gravity="center"
                android:text="@string/activity_novo_item_adicionar"
                android:textSize="@dimen/_12sdp"
                android:textAllCaps="true"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
