<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context="giovannigardusi.listadecompras.Activities.ActivityMenu">

    <FrameLayout
        android:id="@+id/activity_menu_frame"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:background="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="@dimen/_18sdp"
                    android:text="@string/activity_abrir_lista_titulo"
                    android:fontFamily="sans-serif-light" />

                <!--<EditText-->
                <!--android:id="@+id/activity_abrir_lista_arquivo"-->
                <!--android:layout_marginTop="@dimen/_10sdp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="@dimen/_15sdp"-->
                <!--android:hint="@string/activity_abrir_lista_dica"-->
                <!--android:fontFamily="sans-serif-light" />-->

                <ListView
                    android:id="@+id/activity_abrir_lista_arquivos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:clipToPadding="false"
                    android:fontFamily="sans-serif-light" />

                <!--<TextView-->
                <!--android:id="@+id/activity_abrir_lista_abrir"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_gravity="right"-->
                <!--android:paddingTop="@dimen/_5sdp"-->
                <!--android:paddingBottom="@dimen/_5sdp"-->
                <!--android:paddingLeft="@dimen/_10sdp"-->
                <!--android:paddingRight="@dimen/_10sdp"-->
                <!--android:layout_marginTop="@dimen/_10sdp"-->
                <!--android:background="@android:color/holo_blue_light"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/activity_abrir_lista_abrir"-->
                <!--android:textSize="@dimen/_12sdp"-->
                <!--android:textAllCaps="true"-->
                <!--android:fontFamily="sans-serif-light"-->
                <!--android:layout_height="wrap_content" />-->

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/activity_menu_bar_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activity_menu_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:src="@drawable/icon_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textSize="@dimen/_16sdp"
                android:fontFamily="sans-serif-normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/activity_menu_nova_lista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_menu_nova_lista"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="sans-serif-light" />

            <TextView
                android:id="@+id/activity_menu_abrir_lista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_menu_abrir_lista"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="sans-serif-light" />

        </LinearLayout>

        <View
            android:id="@+id/toolbar_shadow"
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="@drawable/shadow_right"
            android:layout_toRightOf="@id/activity_menu_bar"
            android:layout_toEndOf="@id/activity_menu_bar" />

    </RelativeLayout>

</RelativeLayout>